--- a/Projeto Start na Programaçao/index.html
+++ b/Projeto Start na Programaçao/index.html
@@ -99,8 +99,8 @@
 
                   <div>
                     <div class="arrow-faq">
-                        <h3 onclick="mudarEstilo()">A clínica da PetLife possui serviços de emergência?</h3>
-                        <img src="Start imagnes/arrow-down.svg" alt="">
+                        <h3>A clínica da PetLife possui serviços de emergência?</h3>
+                        <img src="Start imagnes/arrow-down.svg" alt="" onclick="mudarEstilo()">
                     </div>
                     <p class="paragrafo paragrafo-active">Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação
                     precisar de atendimento veterinário imediato fora do horário de expediente, nossa equipe está pronta para
