edit "duvidas" section

--- a/Projeto Start na Programaçao/index.html
+++ b/Projeto Start na Programaçao/index.html
@@ -70,57 +70,68 @@
                 tornou referência na área veterinária.</p>
         </section>
 
-        <section id="duvidas">
-            <img src="Start imagnes/faq-img.svg" alt="">
-            <div class="faq">
-                <h2>Ficou alguma dúvida?</h2>
+      <section id="duvidas">
+        <img src="Start imagnes/faq-img.svg" alt="" />
+        <div class="faq">
+          <h2>Ficou alguma dúvida?</h2>
 
-                <div>
-                    <div class="arrow-faq">
-                        <h3>Quais espécies de animais a clínica veterinária atende?</h3>
-                        <img src="Start imagnes/arrow-down.svg" alt="" onclick="mudarEstilo(this)">
-                    </div>
-
-                    <p class="paragrafo ">A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos,
-                    pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de
-                    diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.</p>
-                </div>
-
-                <div>
-                    <div class="arrow-faq">
-                        <h3>Quais espécies de animais a clínica veterinária atende?</h3>
-                        <img src="Start imagnes/arrow-down.svg" alt="" onclick="mudarEstilo(this)">
-                    </div>
-
-                    <p class="paragrafo ">A clínica veterinária da PetLife atende animais de estimação de todas as espécies, incluindo cães, gatos,
-                    pássaros, roedores e répteis. Nossos profissionais possuem conhecimento e experiência para cuidar de
-                    diferentes tipos de animais, oferecendo um atendimento especializado e dedicado a cada um deles.</p>
-                  </div>
-
-                  <div>
-                    <div class="arrow-faq">
-                        <h3>A clínica da PetLife possui serviços de emergência?</h3>
-                        <img src="Start imagnes/arrow-down.svg" alt="" onclick="mudarEstilo(this)">
-                    </div>
-                    <p class="paragrafo ">Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o seu animal de estimação
-                    precisar de atendimento veterinário imediato fora do horário de expediente, nossa equipe está pronta para
-                    ajudar, fornecendo cuidados urgentes e tratamento adequado para garantir o bem-estar do seu pet.</p>
-                  </div>
-
-                  <div>
-                    <div class="arrow-faq">
-                        <h3>A clínica oferece serviços de banho e tosa?</h3>
-                        <img src="Start imagnes/arrow-down.svg" alt="" onclick="mudarEstilo(this)">
-                    </div>
-
-                    <p class="paragrafo ">Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa. Nossa equipe de
-                    profissionais experientes garante que seu pet receba cuidados adequados, usando produtos de alta qualidade e
-                    técnicas seguras. O banho e tosa ajudam a manter a higiene, a saúde da pele e pelagem do seu pet, além de
-                    proporcionar uma experiência relaxante e agradável para eles.</p>
-                  </div>
+          <div>
+            <div class="arrow-faq" onclick="mudarEstilo(this)">
+              <h3>Quais espécies de animais a clínica veterinária atende?</h3>
+              <img src="Start imagnes/arrow-down.svg" alt=""  />
             </div>
-            
-        </section>
+
+            <p class="paragrafo">
+              A clínica veterinária da PetLife atende animais de estimação de todas as espécies,
+              incluindo cães, gatos, pássaros, roedores e répteis. Nossos profissionais possuem
+              conhecimento e experiência para cuidar de diferentes tipos de animais, oferecendo um
+              atendimento especializado e dedicado a cada um deles.
+            </p>
+          </div>
+
+          <div>
+            <div class="arrow-faq" onclick="mudarEstilo(this)">
+              <h3>Quais espécies de animais a clínica veterinária atende?</h3>
+              <img src="Start imagnes/arrow-down.svg" alt="" />
+            </div>
+
+            <p class="paragrafo">
+              A clínica veterinária da PetLife atende animais de estimação de todas as espécies,
+              incluindo cães, gatos, pássaros, roedores e répteis. Nossos profissionais possuem
+              conhecimento e experiência para cuidar de diferentes tipos de animais, oferecendo um
+              atendimento especializado e dedicado a cada um deles.
+            </p>
+          </div>
+
+          <div>
+            <div class="arrow-faq" onclick="mudarEstilo(this)">
+              <h3>A clínica da PetLife possui serviços de emergência?</h3>
+              <img src="Start imagnes/arrow-down.svg" alt=""  />
+            </div>
+            <p class="paragrafo">
+              Sim, a clínica veterinária da PetLife oferece serviços de emergência 24 horas. Se o
+              seu animal de estimação precisar de atendimento veterinário imediato fora do horário
+              de expediente, nossa equipe está pronta para ajudar, fornecendo cuidados urgentes e
+              tratamento adequado para garantir o bem-estar do seu pet.
+            </p>
+          </div>
+
+          <div>
+            <div class="arrow-faq" onclick="mudarEstilo(this)">
+              <h3>A clínica oferece serviços de banho e tosa?</h3>
+              <img src="Start imagnes/arrow-down.svg" alt=""  />
+            </div>
+
+            <p class="paragrafo">
+              Sim, a clínica veterinária da PetLife oferece serviços profissionais de banho e tosa.
+              Nossa equipe de profissionais experientes garante que seu pet receba cuidados
+              adequados, usando produtos de alta qualidade e técnicas seguras. O banho e tosa ajudam
+              a manter a higiene, a saúde da pele e pelagem do seu pet, além de proporcionar uma
+              experiência relaxante e agradável para eles.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer>
@@ -146,6 +157,7 @@
         </div>
 
     </footer>
+    
 
     <script>
        function mudarEstilo(elemento) {
